--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,45 @@
 events {}
 
 http {
+    include /etc/nginx/mime.types;   
+   
     server { 
        listen 80;
        server_name 5.181.217.168;
        root /var/www/alifrazansaputra.id;
+    
+      # all location is case sensitive
+
+      location /assets/ {
+         alias /var/www/alifrazansaputra.id/assets/;
+         expires 1h;
+         access_log off;
+      }
+
+      # Prefix Match
+      location /prefix-example {
+        return 200 "This is prefix route";
+      }
+
+      # Exact Match
+      location = /exact-example {
+        return 200 "This is Exact Example";
+      }
+
+      location ~/regex-example[0-9] {
+        return 200 "Regex Example";
+      }
+
+      # denied case sensitive
+      location ~*/regex-example[0-9] {
+        return 200 "Regex Example";
+      }
+
+      # preferential previx, same regular prefix but have priority over regular prefix
+      location ^~/preferential-example {
+        return 200 "Regex Example";
+      }
+      
+
     }
 }
