--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,8 @@ http {
         return 200 "Regex Example";
       }
       
-
+      location /variable {
+        return 200 "$host\n$uri\n$args";
+      }
     }
 }
