--- a/nginx.conf
+++ b/nginx.conf
@@ -44,5 +44,9 @@ http {
       location /variable {
         return 200 "$host\n$uri\n$args";
       }
+
+       location /setname {
+        return 200 "name = $args";
+      }
     }
 }
