--- a/nginx.conf
+++ b/nginx.conf
@@ -10,11 +10,24 @@ http {
        root /var/www/alifrazansaputra.id;
     
       # all location is case sensitive
-
       location /assets/ {
          alias /var/www/alifrazansaputra.id/assets/;
          expires 1h;
          access_log off;
+      }
+
+      #penggunaan tanda kurung itu untuk menangkap variable yang kemudian akan diinput ke $1, $2
+      rewrite ^/pelajar/(\w+) /greet/$1; 
+
+      rewrite ^/users/\w+ /prefix-example;
+
+      #return 307 for redirect
+      location /logo {
+      return 307 /thumb.png;
+      }
+
+      location = /greet/john {
+        return 200 "Hello Pelajar John";
       }
 
       # Prefix Match
@@ -46,7 +59,7 @@ http {
       }
 
        location /setname {
-        return 200 "name = $args";
+        return 200 "$args";
       }
     }
 }
