rewrite and redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,7 @@ http {
       }
 
       #penggunaan tanda kurung itu untuk menangkap variable yang kemudian akan diinput ke $1, $2
-      rewrite ^/pelajar/(\w+) /greet/$1; 
-
+      rewrite ^/pelajar/(\w+) /greet/$1 last; 
       rewrite ^/users/\w+ /prefix-example;
 
       #return 307 for redirect
