--- a/nginx.conf
+++ b/nginx.conf
@@ -16,49 +16,18 @@ http {
          access_log off;
       }
 
-      #penggunaan tanda kurung itu untuk menangkap variable yang kemudian akan diinput ke $1, $2
-      rewrite ^/pelajar/(\w+) /greet/$1 last; 
-      rewrite ^/users/\w+ /prefix-example;
+    #try files itu hampir sama seperti if else, 
+    try_files $uri /cat.png /greet @friendly_404;
 
-      #return 307 for redirect
-      location /logo {
-      return 307 /thumb.png;
-      }
+    location @friendly_404 {
+      return 404 "Sorry, that file could not be found.";
+    }
 
-      location = /greet/john {
-        return 200 "Hello Pelajar John";
-      }
 
-      # Prefix Match
-      location /prefix-example {
-        return 200 "This is prefix route";
-      }
+    location /greet {
+      return 200 "Hello User";
+    }
+   
 
-      # Exact Match
-      location = /exact-example {
-        return 200 "This is Exact Example";
-      }
-
-      location ~/regex-example[0-9] {
-        return 200 "Regex Example";
-      }
-
-      # denied case sensitive
-      location ~*/regex-example[0-9] {
-        return 200 "Regex Example";
-      }
-
-      # preferential previx, same regular prefix but have priority over regular prefix
-      location ^~/preferential-example {
-        return 200 "Regex Example";
-      }
-      
-      location /variable {
-        return 200 "$host\n$uri\n$args";
-      }
-
-       location /setname {
-        return 200 "$args";
-      }
     }
 }
