14. try files & name location

--- a/alifrazansaputra.nginx.conf
+++ b/alifrazansaputra.nginx.conf
@@ -1,12 +1,18 @@
 server{
     listen 80;
-    listen [::]:80;
+    server_name www.alifrazansaputra.id;
 
     root /var/www/alifrazansaputra.id;
-    index index.html;
     
-    server_name www.alifrazansaputra.id;
-     location / {
-        try_files $uri $uri/ /index.html;
+    #try_file find_first_file_if_not_exist_go_to second_file and so on;
+    try_files $uri /thumb.png /greet /not_found;
+    
+
+    location /not_found{
+        return 404 "not found";
+    }
+    
+    location /greet {
+        return 200 "Hello World";
     }
 }
